--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <h2>Contact Us</h2>
     <p><strong>Phone:</strong> <a href="tel:9948871125">9948871125</a></p>
     <p><strong>Email:</strong> tuitionpoint@example.com</p>
-    <p><strong>Address:</strong> 123, Learning Street, Hyderabad, Telangana</p>
+    <p><strong>Address:</strong> near karima kiranam,narasampet bypass,mahabubabad, Telangana</p>
     <p><strong>WhatsApp:</strong> <a href="https://wa.me/919948871125" target="_blank">Chat on WhatsApp</a></p>
 
     <form onsubmit="submitForm(event)">
