--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p><strong>Phone:</strong> <a href="tel:9948871125">9948871125</a></p>
-    <p><strong>Email:</strong> tuitionpoint@example.com</p>
+    <p><strong>Email:</strong> beast251205@gmail.com</p>
     <p><strong>Address:</strong> near karima kiranam,narasampet bypass,mahabubabad, Telangana</p>
     <p><strong>WhatsApp:</strong> <a href="https://wa.me/919948871125" target="_blank">Chat on WhatsApp</a></p>
 
